# fftarray

./: .gitattributes  .gitignore  .gitlab-ci.yml  .test_durations  CHANGELOG.md  README.md  README.rst  mypy.ini  pyproject.toml  requirements.txt  run_all_checks_all_python_versions.sh  setup.py
.github/workflows/: build_and_deploy_docs.yml  build_docs.yml  documentation.yml  manual_trigger.yml  manual_trigger2.yml  mypy-pytest.yml  mypy.yml  pip_test.yml  pip_test_new_solve.yml  pixi_doc_test.yml  pixi_minimal.yml  pixi_test.yml  pytest.yml  python-app.yml
docs/: Makefile  README.md  build_api.sh  build_docs.sh  build_docs_local.sh  conf.py  exclude.txt  index.rst  installation.md  private.txt
docs/helpers/: generate_versions.py  parse_classes.py
docs/source/: conf.py  first_steps.md  index.rst  indexing.md  installation.md  working_with_jax.md  working_with_other_array_libraries.md
docs/source/api/: array.rst  creation_functions.rst  creation_functions_dim.rst  defaults.rst  dimension.rst  fftarray.rst
examples/: Bragg_beam_splitter.ipynb  Derivative.ipynb  Gaussians.ipynb  helpers.py  indexing.md  multi_dimensional.ipynb  test_examples.py  two_species_groundstate.ipynb
fftarray/: __init__.py  array.py  constraint_solver.py  creation_functions.py  dimension.py  elementwise_functions.py  fft_array.py  fft_constraint_solver.py  fft_constraint_solver_exceptions.py  fft_dimension.py  helpers.py  indexing_helpers.py  jax_pytrees.py  lazy_state.py  named_array.py  statistical_functions.py  tools.py  transform_application.py  xr_helpers.py
fftarray/_utils/: _defaults.py  _formatting.py  _indexing.py  _ufuncs.py  _unpacking.py  defaults.py  formatting.py  helpers.py  indexing.py
fftarray/backends/: __init__.py  backend.py  jax.py  jax_backend.py  np_backend.py  numpy.py  pyfftw.py  pyfftw_backend.py  tensor_lib.py  torch_backend.py
fftarray/plot/: bokeh.py
fftarray/tests/: conftest.py  helpers.py  test_fft_array.py  test_fft_array_indexing.py  test_fft_array_int.py  test_fft_constraint_solver.py  test_fft_constraint_solver_suggestions.py  test_fft_dimension.py  test_jax.py
src/fftarray/: __init__.py  elementwise_ops_pure_grouped.txt
src/fftarray/_src/: array.py  constraint_solver.py  creation_functions.py  defaults.py  dimension.py  elementwise_functions.py  helpers.py  indexing.py  jax_pytrees.py  manipulation_functions.py  named_array.py  op_lazy_luts.py  statistical_functions.py  tools.py  transform_application.py  xr_helpers.py
tests/: helpers.py  test_repo.py
tests/end_to_end/: test_examples.py  test_imag_time_evolution.py
tests/other/: test_array_ops.py  test_dimension.py  test_indexing.py
tests/unit/: test_array.py  test_creation.py  test_elementwise.py  test_format.py  test_manipulation.py  test_statistical.py  test_tools.py  test_utils.py
