[project]
name = "fftarray"

# You can get the current version via 'pixi run -e dev hatch version'
# It does not get updated automatically in editable installs.
# A workaround can be found under https://github.com/maresb/hatch-vcs-footgun-example
# But currently we do not have a usage where this was important.
dynamic = [
    "version"
]
authors = [
    { name="Stefan Seckmeyer"},
    { name="Gabriel Müller"},
    { name="Christian Struckmann"},
]
description = "A library to manage and effiently implement all complexities around the complex Fast Fourier Transform."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=2.0",
    "array-api-compat>=1.11.0",
    "typing-extensions>=4.1",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[project.urls]
Homepage = "https://github.com/QSTheory/fftarray"
Issues = "https://github.com/QSTheory/fftarray/issues"

[project.optional-dependencies]
"jax" = [
    "jax>=0.4.33"
]
"helpers" = [
    "z3-solver",
    "scipy",
]
"dashboards" = [
    "fftarray[helpers]",
    "ipython",
    "bokeh",
    "ipykernel",
]

"dev" = [
    "fftarray[jax, torch, helpers, dashboards, check, doc]",
    "hatch",
]

"torch" = [
    "torch",
]

"check" = [
    "fftarray[jax, torch, helpers]",
    "mypy>=0.910",
    "pytest",
    "hypothesis",
    "ipython",
    "nbformat",
    "nbqa",
    "bokeh",
    "pytest-cov",
    "pytest-xdist[psutil]",
    "pytest-split",
    "array-api-strict>=2.3.0",
    "ruff",
    "xarray",
]

"doc" = [
    "fftarray[jax, helpers]",
    "sphinx>=6.1",
    "sphinx-book-theme>=1.0.1",
    "sphinx-design",
    "sphinx-copybutton",
    "lxml_html_clean",
    "nbsphinx",
    "nbconvert>=7.16.5",
    "nbsphinx-link",
    "myst-nb",
    "m2r2",
    "matplotlib",
    "ipython",
    "bokeh",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    "B",
    "E4",
    "E7",
    "E9",
    "F",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[tool.pixi.tasks]
test = { cmd = ["python", "-m", "pytest"]}
test_all = { cmd = ["python", "-m", "pytest", "--include-slow"]}

test_all_group = { cmd = ["python", "-m", "pytest", "--include-slow", "--splitting-algorithm", "least_duration", "--splits", "$N_GROUPS", "--group", "$GROUP_ID"]}
# These durations are used to estimate the best split of tests when parallelizing.
# This only needs to be run when tests changed significantly.
# If the timings are out of date it just makes the split a bit less optimal.
store_test_durations = { cmd = ["python", "-m", "pytest", "--include-slow", "--store-durations"]}

ruff_all = { cmd = ["ruff", "check", "examples", "tests", "src/fftarray"]}
mypy_nb = { cmd = ["nbqa", "mypy", "examples"]}
mypy = { cmd = ["mypy", "examples", "src/fftarray", "tests"], depends-on = ["mypy_nb"]}
check = { depends-on = ["mypy", "ruff_all", "test"]}
check_all = { depends-on = ["mypy", "ruff_all", "test_all"]}
cov_html = { cmd = ["python", "-m", "pytest", "--cov=./src", "--cov=./examples", "--cov-report=html"]}
cov_xml = { cmd = ["python", "-m", "pytest", "--cov=./src", "--cov=./examples", "--cov-report=xml"]}
# The following command builds the docs of all released versions
# and the tips of the branches defined in docs/helpers/generate_versions.py
# and combines them into a single doc with a version switcher.
doc_all_versions = { cmd = ["make", "all_versions"], "cwd" = "docs" }
doc_local = { cmd = ["make", "local"], "cwd" = "docs" }
# TODO: Currently only tested on macOS. Would be nice to make it an --open option like in cargo.
doc_open = { cmd = ["open", "docs/build/html/local/index.html"], depends-on = ["doc_local"] }

[tool.pixi.project]
channels = ["conda-forge"]
# "osx-64" is incompatible with PyTorch on Python 3.13.
# Without listing "osx-64" here, FFTArray can still be installed on x86-64 macOS without PyTorch,
# but doing development does not work on these systems unfortunately.
platforms = ["linux-64", "linux-aarch64", "osx-arm64", "win-64"]

[tool.pixi.pypi-dependencies]
fftarray = { path = ".", editable = true }

[tool.pixi.feature.jaxcuda]
# Needs to be disabled as workaround Part 1 for https://github.com/prefix-dev/pixi/issues/1051
# platforms = ["linux-64"]
system-requirements = {cuda = "12"}

# List jax cuda depdency here as linux-64 specific as workaround Part 2 for https://github.com/prefix-dev/pixi/issues/1051
[tool.pixi.feature.jaxcuda.target.linux-64.pypi-dependencies]
"fftarray" = {version="*", extras=["jax"]}
"jax" = {version=">=0.4.33", extras=["cuda12"]}

[tool.pixi.feature.py311.dependencies]
python = "3.11.*"
# array-api-strict 2.4.0 does not support NumPy interoperability with Python 3.11.
# Therefore we need to stay on 2.3.1 for Python 3.11.
array-api-strict = "==2.3.1"

[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.feature.py313.dependencies]
python = "3.13.*"

[tool.pixi.environments]
# Recursive optional dependencies are currently ignored by pixi environments: https://github.com/prefix-dev/pixi/issues/2024
devcuda = ["dev", "check", "doc", "jaxcuda", "torch", "helpers", "dashboards"]
dev = ["dev", "check", "doc", "jax", "torch", "helpers", "dashboards"]
doc = ["doc", "jax", "helpers"]
check = ["check", "jax", "torch", "helpers"]
check311 = ["py311", "check", "jax", "torch", "helpers"]
check312 = ["py312", "check", "jax", "torch", "helpers"]
check313 = ["py313", "check", "jax", "torch", "helpers"]

[tool.pixi.feature.doc.dependencies]
pandoc = ">=3.5,<4"
